syntax = "proto3";

import "neursafe_fl/proto/message.proto";

service ClientService {
    rpc Register(neursafe_fl.v1.ClientRegister) returns (neursafe_fl.v1.Response);
    rpc Report (neursafe_fl.v1.ClientInfo) returns (neursafe_fl.v1.Response);
    rpc Quit (neursafe_fl.v1.Client) returns (neursafe_fl.v1.Response);
}